# FastAPI2025

./: pyproject.toml  requirements.txt
src/fast_zero/: app.py
src/migrations/versions/: 4365c6803276_create_users_table.py
src/tests/: test_app.py
