[project]
name = "fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "certifi==2025.1.31",
    "click==8.1.8",
    "colorama==0.4.6",
    "coverage==7.8.0",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "fastapi-cli==0.0.7",
    "fastapi==0.115.12",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "ignr==2.2",
    "iniconfig==2.1.0",
    "jinja2==3.1.6",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "mslex==1.3.0",
    "packaging==24.2",
    "pluggy==1.5.0",
    "psutil==6.1.1",
    "pydantic-core==2.33.1",
    "pydantic==2.11.2",
    "pygments==2.19.1",
    "pytest-cov==6.1.1",
    "pytest==8.3.5",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "rich-toolkit==0.14.1",
    "rich==14.0.0",
    "ruff==0.11.4",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "starlette==0.46.1",
    "taskipy==1.14.1",
    "tomli==2.2.1",
    "typer==0.15.2",
    "typing-extensions==4.13.1",
    "typing-inspection==0.4.0",
    "uvicorn==0.34.0",
    "watchfiles==1.0.4",
    "websockets==15.0.1",
]

[tool.uv.sources]
fastapi = { workspace = true }

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'


[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'

run = 'fastapi dev src/fast_zero/app.py'

pre_test = 'task lint'
test = 'uv run pytest -s -x --cov=fast_zero -vv'
post_test = 'coverage html'

piplist = 'uv pip freeze > requirements.txt && uv add -r requirements.txt'
